--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "cookies-next": "^2.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
-    "json-server": "^0.17.1"
+    "json-server": "^0.17.1",
+    "json-server-auth": "^2.1.0"
   }
 }
