--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookies-next": "^2.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "jspdf": "^2.5.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
